--- a/Trial.css
+++ b/Trial.css
@@ -16,7 +16,7 @@
 }
 /* Main Menu (right) */
 #header-global .header-right-navigation .user-info span {
-	color: #AA74FE;
+	color: #2A09BF;
 }
 
 /* Top Header */
