--- a/Version1.css
+++ b/Version1.css
@@ -253,7 +253,7 @@ span.name,
 #main_avatar_room #main-user-list-room #avatar-list li.mod p.username:after,
 #main_avatar_room #main-user-list-room #avatar-list li.resident-dj p.username:after,
 #main_avatar_room #main-user-list-room #avatar-list li.vip p.username:after {
-	color: #AA74FE;
+	color: #B32500;
 }
 
 /** Current DJ **/
