--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -4,45 +4,64 @@
   Made by @iFailAgain
 */
 
-/* name colours */
+/* Staff List */
+
+/** Owner/co-owner: are both considered admins **/
 #chat .chat-main .isOwner .username,
 #chat .chat-main .isOwner .username:hover,
-#chat .chat-main .isOwner .username:visited
+#chat .chat-main .isOwner .username:visited,
+#main_avatar_room #main-user-list-room #avatar-list li.creator p.username,
+#main_avatar_room #main-user-list-room #avatar-list li.creative p.username:after,
+#chat .chat-main .isCo-owner .username,
+#chat .chat-main .isCo-owner .username:hover,
+#chat .chat-main .isCo-owner .username:visited,
+#main_avatar_room #main-user-list-room #avatar-list li.co-owner p.username,
+#main_avatar_room #main-user-list-room #avatar-list li.co-owner p.username:after
 {
     color: #FF38CB !important;
 }
 
-#chat .chat-main .isCo-owner .username,
-#chat .chat-main .isCo-owner .username:hover,
-#chat .chat-main .isCo-owner .username:visited
-{
-    color: #FF007F !important;
-}
-
+/** Manager: Can give out staff ranks. **/
 #chat .chat-main .isManager .username,
 #chat .chat-main .isManager .username:hover,
-#chat .chat-main .isManager .username:visited
+#chat .chat-main .isManager .username:visited,
+#main_avatar_room #main-user-list-room #avater-list li.manager p.username,
+#main_avatar_room #main-user-list-room #avater-list li.manager p.username:after
 {
     color: #3083FF !important;
 }
 
+/** MOD: All the functionalities to moderate. **/
 #chat .chat-main .isMod .username,
 #chat .chat-main .isMod .username:hover,
-#chat .chat-main .isMod .username:visited
+#chat .chat-main .isMod .username:visited,
+#chat .chat-main .isManager .username:visited,
+#main_avatar_room #main-user-list-room #avater-list li.mod p.username,
+#main_avatar_room #main-user-list-room #avater-list li.mod p.username:after
 {
     color: #3083FF !important;
 }
 
+/** VIP: Only able to skip songs. **/
 #chat .chat-main .isVip .username,
 #chat .chat-main .isVip .username:hover,
-#chat .chat-main .isVip .username:visited
+#chat .chat-main .isVip .username:visited,
+#main_avatar_room #main-user-list-room #avater-list li.vip p.username,
+#main_avatar_room #main-user-list-room #avater-list li.vip p.username:after
 {
     color: #29A3A3 !important;
 }
 
+/** ResidentDJ: Cosmetic titel **/
 #chat .chat-main .isResident-dj .username,
 #chat .chat-main .isResident-dj .username:hover,
 #chat .chat-main .isResident-dj .username:visited
 {
     color: #33CCFF !important;
+}
+
+/** Current DJ **/
+#main_avatar_room #main-user-list-room #avatar-list li.currentDJ p.username,
+#main_avatar_room #main-user-list-room #avatar-list li.currentDJ p.username:after {
+	color: #0FF;
 }
