--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -36,7 +36,7 @@
 #chat .chat-main .isMod .username:hover,
 #chat .chat-main .isMod .username:visited,
 #main_avatar_room #main-user-list-room #avatar-list li.mod p.username,
-#main_avatar_room #main-user-list-room #avater-list li.mod p.username:after
+#main_avatar_room #main-user-list-room #avatar-list li.mod p.username:after
 {
     color: #00AA00 !important;
 }
