--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -15,14 +15,14 @@
 #chat .chat-main .isCo-owner .username:hover,
 #chat .chat-main .isCo-owner .username:visited
 {
-    color: #963C39 !important;
+    color: #FF5555 !important;
 }
 #main_avatar_room #main-user-list-room #avatar-list li.creator p.username,
 #main_avatar_room #main-user-list-room #avatar-list li.creator p.username:after,
 #main_avatar_room #main-user-list-room #avatar-list li.co-owner p.username,
 #main_avatar_room #main-user-list-room #avatar-list li.co-owner p.username:after
 {
-    color: #963C39 !important;
+    color: #FF5555 !important;
 }
 
 
@@ -31,12 +31,12 @@
 #chat .chat-main .isManager .username:hover,
 #chat .chat-main .isManager .username:visited
 {
-    color: #37662C !important;
+    color: #00AA00 !important;
 }
 #main_avatar_room #main-user-list-room #avatar-list li.manager p.username,
 #main_avatar_room #main-user-list-room #avatar-list li.manager p.username:after
 {
-    color: #37662C !important;
+    color: #00AA00 !important;
 }
 
 
@@ -45,12 +45,12 @@
 #chat .chat-main .isMod .username:hover,
 #chat .chat-main .isMod .username:visited
 {
-    color: #399C51 !important;
+    color: #00B700 !important;
 }
 #main_avatar_room #main-user-list-room #avatar-list li.mod p.username,
 #main_avatar_room #main-user-list-room #avatar-list li.mod p.username:after
 {
-    color: #399C51 !important;
+    color: #00B700 !important;
 }
 
 
@@ -73,11 +73,11 @@
 #chat .chat-main .isResident-dj .username:hover,
 #chat .chat-main .isResident-dj .username:visited
 {
-    color: #83C1D6 !important;
+    color: #459FFF !important;
 }
 #main_avatar_room #main-user-list-room #avatar-list li.resident-dj p.username,
 #main_avatar_room #main-user-list-room #avatar-list li.resident-dj p.username:after
 {
-    color: #83C1D6 !important;
+    color: #459FFF !important;
 }
 
