--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -88,17 +88,42 @@
 /** Admins **/
 #chat .chat-main .isOwner .username::before
 {
-    content:       url(https://cloud.githubusercontent.com/assets/12417294/12204984/0aba8bc0-b638-11e5-9c01-25bbf821509a.png);
+    content:       url(https://cloud.githubusercontent.com/assets/12417294/12205025/5f08c052-b638-11e5-9219-78e8f083f611.png);
     position:      relative;
     top:           4px;
     padding-right: 2px;
 }
 #chat .chat-main .isCo-owner .username::before
 {
-    content:       url(https://cloud.githubusercontent.com/assets/12417294/12204984/0aba8bc0-b638-11e5-9c01-25bbf821509a.png);
+    content:       url(https://cloud.githubusercontent.com/assets/12417294/12205025/5f08c052-b638-11e5-9219-78e8f083f611.png);
     position:      relative;
     top:           4px;
     padding-right: 2px;
 }
+
 /** Manager **/
+#chat .chat-main .isManager .username::before
+{
+    content:       url(https://cloud.githubusercontent.com/assets/12417294/12205027/60674432-b638-11e5-9d9d-c352bd29fd47.png);
+    position:      relative;
+    top:           4px;
+    padding-right: 2px;
+}
+
 /** Mod **/
+#chat .chat-main .isMod .username::before
+{
+    content:       url(https://cloud.githubusercontent.com/assets/12417294/12205029/62dc1710-b638-11e5-977c-1eac69dea087.png);
+    position:      relative;
+    top:           4px;
+    padding-right: 2px;
+}
+
+/** VIP **/
+#chat .chat-main .isVip .username::before
+{
+    content:       url(https://cloud.githubusercontent.com/assets/12417294/12205131/0afa9b7e-b639-11e5-9f0f-177e34df64c2.png);
+    position:      relative;
+    top:           4px;
+    padding-right: 2px;
+}
