--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -93,6 +93,7 @@
     top:           4px;
     padding-right: 2px;
 }
+#main_avatar_room #main-user-list-room #avatar-list li.co-owner p.username::before,
 #chat .chat-main .isCo-owner .username::before
 {
     content:       url(https://cloud.githubusercontent.com/assets/12417294/12205025/5f08c052-b638-11e5-9219-78e8f083f611.png);
