--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -138,7 +138,7 @@
 }
 
 /** Glados **/
-ul.avatar-list li.user-GLaDOS_ p.dubs:before {
+ul.avatar-list li.user-ifailagain p.dubs:before {
 	content: "BOT  -  ";
 	font-weight: 700 !important;
 	color: #FF5555 !important;
