--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -126,3 +126,16 @@
 {
     color: #FFDD6F !important;
 }
+
+/** me command fix **/
+#chat .chat-container .chat-messages .chat-main li.system-error
+{
+    text-transform: uppercase;
+}
+#chat .chat-main li[class*='system']
+{
+    color:         darkturquoise !important;
+    text-align:    center;
+    border-top:    darkturquoise 1px solid !important;
+    border-bottom: darkturquoise 1px solid !important;
+}
