--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -127,3 +127,8 @@
     color: #FFDD6F !important;
 }
 /** Glados **/
+ul.avatar-list li.user-56818632da3fab1300d03c49 p.dubs:before {
+	content: "DubX Team  -  ";
+	font-weight: 700 !important;
+	color: #ff3657 !important;
+}
