--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -133,7 +133,7 @@ ul.avatar-list li.user-56818632da3fab1300d03c49 p.dubs:before {
 	color: #ff3657 !important;
 }
 
-ul.avatar-list li.user-iFailAgain p.dubs:before {
+ul.avatar-list li.user-ifailagain p.dubs:before {
 	content: "Awesome  -  ";
 	font-weight: 700 !important;
 	color: #ff3657 !important;
