--- a/HPBTstyle.css
+++ b/HPBTstyle.css
@@ -127,13 +127,13 @@
     color: #FFDD6F !important;
 }
 /** Glados **/
-ul.avatar-list li.user-56818632da3fab1300d03c49 p.dubs:before {
+ul.avatar-list li.user-hpbtbot p.dubs:before {
 	content: "Awesome  -  ";
 	font-weight: 700 !important;
 	color: #ff3657 !important;
 }
 
-ul.avatar-list li.user-5623cc75c509a2560031077f p.dubs:before {
+ul.avatar-list li.user-ifailagain p.dubs:before {
 	content: "Awesome  -  ";
 	font-weight: 700 !important;
 	color: #ff3657 !important;
